--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>TSPHomePage</title>
+    <!-- <base href="/home-page/" /> -->
     <base href="/" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
